--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -19,7 +19,7 @@
   </mat-card-content>
 
   <div [formGroup]="formFilter" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
-    <mat-form-field fxFlex="18%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
+    <mat-form-field fxFlex="30%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
       <mat-label>Chi nhánh</mat-label>
       <mat-select formControlName="OfficeFilter">
         <mat-option *ngFor="let office of offices" [value]="office.officeId">
@@ -27,7 +27,7 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field fxFlex="18%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
+    <mat-form-field fxFlex="30%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
       <mat-label>Nhân viên</mat-label>
       <mat-select formControlName="createdByFilter">
         <mat-option *ngFor="let option of staffs" [value]="option.userId">
@@ -36,7 +36,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field fxFlex="18%">
+    <mat-form-field fxFlex="30%">
       <mat-label>Ngân hàng</mat-label>
       <select matSelect matNativeControl formControlName="bankFilter">
         <option value="ALL">Tất cả ngân hàng</option>
@@ -45,12 +45,20 @@
         </option>
       </select>
     </mat-form-field>
-
+    <mat-form-field fxFlex="18%">
+      <mat-label>Thẻ đến hạn {{ dueDay.value != 0 ? (dueDay.value + ' ngày tới') : ' hôm nay' }} </mat-label>
+      <input  type="number" matInput #dueDay min="0" max="31"  formControlName="dueDay" />
+    </mat-form-field>
     <mat-form-field fxFlex="18%">
       <mat-label>Thông tin khách hàng</mat-label>
-      <input matInput formControlName="query" />
+      <input matInput type="text" formControlName="query" />
     </mat-form-field>
+    <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="viewDoneTransaction" class="margin-v">
+        Đã thực hiện xong
+      </mat-checkbox>
 
+    </div>
     <div fxFlex="18%">
       <button
         *ngIf="fromDateAndToDate"
@@ -154,10 +162,10 @@
           Ngày tạo
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          <label style="color: green; font-weight: bold;">{{ journalEntry.panNumber.replace("XXX-XXX", "X") }} </label>
-          <span style="color: red ; font-weight: bold;"> ({{ journalEntry.panBank }}) </span>
+          <label style="color: green; font-weight: bold">{{ journalEntry.panNumber.replace("XXX-XXX", "X") }} </label>
+          <span style="color: red; font-weight: bold"> ({{ journalEntry.panBank }}) </span>
           <br />
-          Ngày đến hạn: <label style="color: red ; font-weight: bold;"> {{journalEntry.dueDay}} </label>
+          Ngày đến hạn: <label style="color: red; font-weight: bold"> {{ journalEntry.dueDay }} </label>
           <br />
           {{ journalEntry.createdDate | date: "dd/MM/yyyy HH:mm:ss" }}
         </td>
@@ -178,10 +186,13 @@
       </ng-container> -->
 
       <ng-container matColumnDef="officeName">
-        <th mat-header-cell *matHeaderCellDef>Chi nhánh/ <br /> Người tạo</th>
-        <td mat-cell *matCellDef="let journalEntry">{{ journalEntry.officeName }} <br />
-          <span style="color: green; font-weight: bold;"> {{journalEntry.createdByName}} </span>
-
+        <th mat-header-cell *matHeaderCellDef>
+          Chi nhánh/ <br />
+          Người tạo
+        </th>
+        <td mat-cell *matCellDef="let journalEntry">
+          {{ journalEntry.officeName }} <br />
+          <span style="color: green; font-weight: bold"> {{ journalEntry.createdByName }} </span>
         </td>
       </ng-container>
 
