--- a/src/app/card-transfer/manage-transfer/manage-transfer.component.html
+++ b/src/app/card-transfer/manage-transfer/manage-transfer.component.html
@@ -4,6 +4,32 @@
     <hr>
     <h2>Điều kiện tìm kiếm</h2>
     <mat-card-content>
+      <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"  [formGroup]="formDate">
+        <mat-form-field fxFlex="22%">
+          <mat-label>Từ ngày</mat-label>
+          <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
+          <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
+          <mat-datepicker #transactionDateFromPicker></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="22%">
+          <mat-label>Đến ngày</mat-label>
+          <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
+          <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
+          <mat-datepicker #transactionDateToPicker></mat-datepicker>
+        </mat-form-field>
+
+        <button
+          *ngIf="fromDateAndToDate"
+          (click)="getListTransfer()"
+          style="align-self: center; background: #3ba851; color: #FFFFFF;"
+          color="primary"
+          mat-button
+        >
+          Tìm kiếm &nbsp;<i class="fa fa-search"></i>
+        </button>
+      </div>
+
       <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
         <mat-form-field fxFlex="22%">
           <mat-label>Tìm theo mã biên bản</mat-label>
