fix transfer partner fund for all staff of office

--- a/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
@@ -1,25 +1,33 @@
-<h1 mat-dialog-title>{{'Saving_Account_Component.PartnerAdvanceCash.partnerTitle' |translate}}</h1>
+<h1 mat-dialog-title>{{ "Saving_Account_Component.PartnerAdvanceCash.partnerTitle" | translate }}</h1>
 
-<div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'"
-     fxLayoutGap.lt-md="0%">
-
+<div
+  mat-dialog-content
+  [formGroup]="form"
+  [fxLayout]="'column'"
+  fxLayout.lt-md="column"
+  [fxLayoutGap]="'1%'"
+  fxLayoutGap.lt-md="0%"
+>
   <mat-form-field class="select-book">
     <mat-label>Chọn đối tác</mat-label>
-    <input required type="text" placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}"
-           matInput formControlName="partnerAdvanceCash" [matAutocomplete]="auto">
+    <input
+      required
+      type="text"
+      placeholder="{{ 'Saving_Account_Component.clientAdvanceCash.labelClientCash' | translate }}"
+      matInput
+      formControlName="partnerAdvanceCash"
+      [matAutocomplete]="auto"
+    />
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       <mat-option *ngFor="let cl of filteredPartner" [value]="cl">
-        {{cl.desc}}
+        {{ cl.desc }}
       </mat-option>
     </mat-autocomplete>
-    <mat-error *ngIf="partner.hasError('required')">
-      Yêu cầu: chọn đối tác
-    </mat-error>
+    <mat-error *ngIf="partner.hasError('required')"> Yêu cầu: chọn đối tác </mat-error>
   </mat-form-field>
 
-
   <mat-form-field fxFlex="96%" *ngIf="form.contains('partnerPaymentType')">
-    <mat-label>{{'Saving_Account_Component.PartnerAdvanceCash.labelTypes' |translate}}</mat-label>
+    <mat-label>{{ "Saving_Account_Component.PartnerAdvanceCash.labelTypes" | translate }}</mat-label>
     <mat-select required formControlName="partnerPaymentType">
       <mat-option *ngFor="let type of advanceCashPaymentTypes" [value]="type.id">
         {{ type.name }}
@@ -28,16 +36,23 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="96%" *ngIf="form.contains('partnerOfficeAdvanceCash')">
-    <mat-label>{{'Saving_Account_Component.PartnerAdvanceCash.labelOfficeReciver' |translate}}</mat-label>
+    <mat-label>{{ "Saving_Account_Component.PartnerAdvanceCash.labelOfficeReciver" | translate }}</mat-label>
     <mat-select required formControlName="partnerOfficeAdvanceCash">
       <mat-option *ngFor="let type of partnerOfficeAdvanceCashes" [value]="type.officeId">
         {{ type.name }}
       </mat-option>
     </mat-select>
   </mat-form-field>
-
+  <mat-form-field class="select-book" *ngIf="form.contains('client')">
+    <mat-label>Nhân viên</mat-label>
+    <mat-select required formControlName="client">
+      <mat-option *ngFor="let staff of staffs" [value]="staff.staffId">
+        {{ staff.displayName }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
   <mat-form-field fxFlex="96%" *ngIf="form.contains('partnerClientVaultAdvanceCash')">
-    <mat-label>{{'Saving_Account_Component.PartnerAdvanceCash.labelAccountReciver' |translate}}</mat-label>
+    <mat-label>{{ "Saving_Account_Component.PartnerAdvanceCash.labelAccountReciver" | translate }}</mat-label>
     <mat-select required formControlName="partnerClientVaultAdvanceCash">
       <mat-option *ngFor="let type of partnerClientVaultAdvanceCashes" [value]="type.id">
         {{ type.externalId }}
@@ -46,23 +61,24 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="96%">
-    <mat-label>{{'Saving_Account_Component.PartnerAdvanceCash.labelAmountAdvance' |translate}}</mat-label>
-    <input required
-           currencyMask
-           matInput formControlName="amountPartnerAdvance">
+    <mat-label>{{ "Saving_Account_Component.PartnerAdvanceCash.labelAmountAdvance" | translate }}</mat-label>
+    <input required currencyMask matInput formControlName="amountPartnerAdvance" />
   </mat-form-field>
-
 
   <mat-form-field *ngIf="form.contains('notePartnerAdvance')" fxFlex="48%">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelNoteAdvance' |translate}}</mat-label>
-    <input type="text" aria-multiline="true" matInput formControlName="notePartnerAdvance">
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelNoteAdvance" | translate }}</mat-label>
+    <input type="text" aria-multiline="true" matInput formControlName="notePartnerAdvance" />
   </mat-form-field>
-
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close>{{ 'Shared_Component.FormDialog.btnCancel' | translate }}</button>
-  <button mat-raised-button color="primary"
-          [mat-dialog-close]="{ data: form  }"
-          [disabled]="!form.valid || form.pristine">{{ 'Shared_Component.FormDialog.btnAdd' |translate }}</button>
+  <button mat-raised-button mat-dialog-close>{{ "Shared_Component.FormDialog.btnCancel" | translate }}</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [mat-dialog-close]="{ data: form }"
+    [disabled]="!form.valid || form.pristine"
+  >
+    {{ "Shared_Component.FormDialog.btnAdd" | translate }}
+  </button>
 </mat-dialog-actions>
