enable filter is in transaction on due day card tab

--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -77,13 +77,13 @@
         </option>
       </select>
     </mat-form-field>
-    <!-- <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+    <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <mat-label ></mat-label>
       <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewDoneTransaction" class="margin-v">
         Đã thực hiện giao dịch
       </mat-checkbox>
 
-    </div> -->
+    </div>
     <div fxFlex="20%">
       <button
         *ngIf="fromDateAndToDate"
